# nlp-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  READ.txt  README.md  makeall  makecleanall  vcpkg.json  vtrun_logfile.out
.github/workflows/: build-enginefiles.yml  build-linux.yml  build-macos.yml  build-visualfiles.yml  build-windows.yml  ci.yml  linux-build-icu.yml  linux-build.yml  linux.yml  mac.yml  macos-build.yml  move-assets-temp.yml  move-assets.yml  nlpengine.yml  release-engine.yml  test-linux.yml  test-macos-arm.yml  test-macos-x64.yml  test-macos.yml  test-platforms.yml  test-windows.yml  update-analyzers.yml  visualtext.yml  win-build.yml  win.yml  windows-build-icu.yml  windows-build.yml
analyzers/: README.md
analyzers/corporate/: cleanana  corporate.ana
analyzers/taiparse/: taiparse.ana
cs/: CMakeLists.txt
cs/libconsh/: Aconsh.cpp  CMakeLists.txt  StdAfx.cpp  StdAfx.h  arg.cpp  bind.cpp  cc_code.cpp  cc_code.h  cc_gen.cpp  cc_gen.h  cg.cpp  cg_global.cpp  cg_global.h  cmd.cpp  cmd.h  con_gen.cpp  con_gen.h  con_ini.cpp  con_ini.h  consh_gen.cpp  consh_gen.h  consh_kb.cpp  dyn.cpp  dyn.h  gen.cpp  gen.h  help.cpp  help.h  ind.cpp  ind.h  io.cpp  io.h  libconsh.cpp  libconsh.dsp  libconsh.dsw  libconsh.sln  libconsh.vcproj  makefile  ptr_gen.cpp  ptr_gen.h  (+16 more)
cs/libkbm/: Akbm.cpp  CMakeLists.txt  StdAfx.h  attr.cpp  con_.cpp  dict.cpp  find.cpp  kbm.cpp  kbm_alloc.cpp  kbm_def.h  kbm_kb.cpp  kbm_priv.h  libkbm.cpp  libkbm.dsp  libkbm.dsw  libkbm.sln  libkbm.vcproj  makefile  pret.cpp  ptr.cpp  st.cpp  sym.cpp
cs/libkbm/hold/: StdAfx.cpp
cs/libprim/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  dir.cpp  dyn.cpp  io.cpp  libprim.cpp  libprim.dsp  libprim.dsw  libprim.sln  libprim.vcproj  list.cpp  makefile  makeone  prim.cpp  sm.cpp  str.cpp  u_out.cpp  u_out.h  unicu.cpp
cs/libprim/hold/: mach-old.cpp  x.cpp
cs/libqconsh/: Aconsh.cpp  Aqconsh.cpp  arg.cpp  attr.cpp  attr.h  bind.cpp  cg.cpp  cg_global.cpp  cg_global.h  cgcon.cpp  cgcon.h  cgdict.cpp  cgdict.h  cmd.cpp  cmd.h  consh_kb.cpp  help.cpp  ind.cpp  ind.h  io.cpp  io.h  libconsh.cpp  libqconsh.cpp  libqconsh.sln  libqconsh.vcproj  libqconsh.vcxproj  libqconsh.vcxproj.filters  stdafx.cpp  stdafx.h  u_out.cpp  u_out.h  ui.cpp  ui.h
cs/libqkbm/: Aqkbm.cpp  libqkbm.cpp  libqkbm.sln  libqkbm.vcproj  libqkbm.vcxproj  libqkbm.vcxproj.filters  mgr.cpp  mgr.h  stdafx.cpp  stdafx.h  strx.cpp  strx.h  util.cpp  util.h  xcon.cpp  xcon.h  xptr.cpp  xptr.h  xstr.cpp  xstr.h  xsym.cpp  xsym.h
cs/libstream/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  libStream.cpp  libStream.dsp  libStream.dsw  libStream.h  libStream.sln  libStream.vcproj  makefile  streamClasses.cpp  streamClasses.h  u_convert.cpp  u_convert.h
data/spec/: RemoveBlankLines.nlp  funs.pat  num.nlp  tags.nlp  xmlfns.nlp
docs/: PERCOLATION.md
docs/version-3/: VERSION-3-OVERVIEW.md
icu/source/: CMakeLists.txt
images/: README.md
include/Api/: libStream.h  machine-min.h  machine.h  (+4 more)
lite/: Agram.cpp  Arug.cpp  Arug.h  Arun.cpp  Aseq.cpp  Auser.cpp  Avar.cpp  CMakeLists.txt  Eana.h  Gui.cpp  StdAfx.cpp  StdAfx.h  WNFunctions.cpp  WNFunctions.h  algo.cpp  ana.cpp  angen.cpp  angen.h  arg.cpp  chars.cpp  chars.h  check.cpp  check.h  cmltok.cpp  cmltok.h  code.cpp  delt.h  dicttok.cpp  dicttok.h  dir.cpp  dirfile.cpp  dlist.h  dsem.cpp  dsem.h  dyn.cpp  dyn.h  eana.cpp  fn.cpp  fn.h  fnrun.cpp  (+149 more)
lite/hold/: dirfile.cpp  web.cpp
nlp/: CMakeLists.txt  Uanalyze.cpp  Uanalyze.h  input.txt  main.cpp  makeall  makecleanall  makeenv  makefile  makeversion.bat  makeversion.sh  noop.ana  u_out.cpp  u_out.h  version.cpp  version.h  xxx
nlp/data/: qqq.txt  xxx.txt  yyy.txt  zzz.txt
nlp/input/misc/abclog.saf/: output.txt
nlp/kb/: Cc_code.cpp  Cc_code.h  Con0.cpp  Con_ini.cpp  Con_ini.h  Ptr0.cpp  Ptr_ini.cpp  Ptr_ini.h  St0.cpp  St_ini.cpp  St_ini.h  StdAfx.cpp  StdAfx.h  Sym0.cpp  Sym1.cpp  Sym10.cpp  Sym11.cpp  Sym12.cpp  Sym13.cpp  Sym14.cpp  Sym15.cpp  Sym16.cpp  Sym17.cpp  Sym18.cpp  Sym19.cpp  Sym2.cpp  Sym20.cpp  Sym21.cpp  Sym22.cpp  Sym23.cpp  Sym24.cpp  Sym25.cpp  Sym26.cpp  Sym27.cpp  Sym28.cpp  Sym29.cpp  Sym3.cpp  Sym30.cpp  Sym31.cpp  Sym32.cpp  (+32 more)
nlp/output/: output.txt
nlp/run/: analyzer.cpp  analyzer.h  auxiliary.cpp  data.h  edata.h  ehash.cpp  ehead.h  makefile  rchain.h  rdata.h  rhash.cpp  rhead.h  run.cpp  run.def  run.dsp  run.dsw  run.h  run.ncb  run.sln  run.vcproj
nlp/spec/: analyzer.seq  stuff.pat
nlp/user/: Ualgo.cpp  Ualgo.h  Ucode.cpp  Ucode.h  Umisc.cpp  Umisc.h  Upre.cpp  Upre.h  Ureg.cpp  Ureg.h  makefile  user.cpp  user.def  user.dsp  user.dsw  user.h  user.sln  user.vcproj
nlplib/: CMakeLists.txt  nlplib.cpp  nlplib.h
qdbm/: ChangeLog  README
scripts/: build-ubuntu-2004.sh  compile-analyzer.ps1  compile-devnet.bat  compile-devu.bat  compile-relnet.bat  compile-relu.bat  distdev.bat  distgui.bat  distsrc-x.bat  distsrc.bat  release_w_unicode.bat  released.bat  test-compile-roundtrip.ps1  xxx.txt
src/: CMakeLists.txt
src/words/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  makefile  word1.cpp  word10.cpp  word11.cpp  word12.cpp  word13.cpp  word14.cpp  word15.cpp  word16.cpp  word17.cpp  word18.cpp  word19.cpp  word2.cpp  word20.cpp  word21.cpp  word22.cpp  word23.cpp  word24.cpp  word25.cpp  word26.cpp  word27.cpp  word28.cpp  word29.cpp  word3.cpp  word30.cpp  word4.cpp  word5.cpp  word6.cpp  word7.cpp  word8.cpp  word9.cpp  wordarrs.cpp  words.cpp  words.dsp  words.dsw  words.sln  words.vcproj
test/: Agram.cpp  Arug.cpp  Arug.h  Arun.cpp  Aseq.cpp  Auser.cpp  Avar.cpp  CMakeLists.txt  Eana.h  Gui.cpp  README.md  StdAfx.cpp  StdAfx.h  WNFunctions.cpp  WNFunctions.h  _log  algo.cpp  ana.cpp  angen.cpp  angen.h  arg.cpp  chars.cpp  chars.h  check.cpp  check.h  code.cpp  delt.h  dir.cpp  dlist.h  dsem.cpp  dsem.h  dyn.cpp  dyn.h  eana.cpp  fn.cpp  fn.h  fnrun.cpp  folder.cpp  folder.h  func_defs.h  (+137 more)
wn/: WNFunctions.cpp  WNFunctions.h  binsrch.c  license.h  morph.c  search.c  setutil.h  wn.h  wn.sln  wn.vcproj  wnconsts.h  wnglobal.c  wnglobal.h  wnhelp.c  wnhelp.h  wnrtl.c  wnrtl.h  wntypes.h  wnutil.c
(+1103 files in other folders)
